# perplexity-web-wrapper

./: .gitignore  README.md  api.py  pyproject.toml
api/: main.py  utils.py
lib/: perplexity.py
